[MA-437] Pipeline to update generated types (pull request #236)
* Add script to update generated types in CI

* [skip ci] Update capital.ts generated types


Approved-by: Parth Patel

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -32,3 +32,11 @@ pipelines:
             - node
           script:
             - bash ./scripts/qa-nightly-build.sh
+    update-generated-types:
+      - step:
+          name: "Update generated types"
+          caches:
+            - node
+          script:
+            - yarn install --frozen-lockfile
+            - bash ./scripts/update-generated-types.sh
