[MA-388] Add 'Transfer Funds' modal (pull request #253)

--- a/package.json
+++ b/package.json
@@ -81,8 +81,8 @@
     "react-native-pdf": "^6.5.0",
     "react-native-permissions": "^3.2.0",
     "react-native-phone-number-input": "^2.1.0",
-    "react-native-reanimated": "2.2.2",
-    "react-native-reanimated-carousel": "^2.3.2",
+    "react-native-reanimated": "^2.8.0",
+    "react-native-reanimated-carousel": "^2.6.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.13.1",
     "react-native-section-alphabet-list": "^2.1.0",
